1️⃣  V.1.9 🎉 Working on web/emails translation  ✅ | Translate, styles, file attached 🎉

--- a/client/src/locales/en/translation.json
+++ b/client/src/locales/en/translation.json
@@ -1,4 +1,12 @@
 {
+  "nextStepButton": "Next Step",
+  "prevStepButton": "Previous Step",
+  "submitButton": "Send",
+  "Home": {
+    "title": "Welcome to the union between Rimbo and Badi",
+    "subtitle": "If you're an agent, contact with...",
+    "subtext": "If you want to know more about.... do the following..."
+  },
   "RJ1": {
     "header": {
       "title": "List your tenant",
@@ -18,7 +26,37 @@
     "stepOne": {
       "tenantName": "Tenant's Full Name",
       "tenantEmail": "Tenant's email",
-      "tenantsPhone": "Tenant's phone number"
+      "tenantPhone": "Tenant's phone number",
+      "tenantNamePL": "Enter name and surname",
+      "tenantEmailPL": "Enter a valid email address",
+      "tenantPhonePL": "Enter phone number"
+    },
+    "stepTwo": {
+      "service": "Choose service",
+      "servicePL": "Select a Badi service",
+      "rentDuration": "Duration rental agreement (years)",
+      "rentDurationPL": "Enter duration",
+      "rentAmount": "Monthly rent (in €)",
+      "rentAmountPL": "Enter rent",
+      "rentalAddress": "Address of the property",
+      "rentalAddressPL": "Enter address",
+      "rentalCity": "City",
+      "rentalCityPL": "Enter the city name",
+      "rentalPostalCode": "Postal code",
+      "rentalPostalCodePL": "Enter the postal code",
+      "pp1": " By submitting this form, you understand and accept that we use your information in accordance with our",
+      "pp2": "privacy policy",
+      "pp3": "and",
+      "pp4": "cookies policy"
+    },
+    "completed": {
+      "title": "Warm welcome ",
+      "titleTwo": " from ",
+      "subtitle": "You have successfully registered",
+      "subtitleTwo": " as a new Tenant with Rimbo",
+      "subtext": "We just sent you an email to ",
+      "subtextTwo": "with all the information and next instructions for you",
+      "regards": "Best regards"
     }
   }
 }
