--- a/client/src/locales/es/translation.json
+++ b/client/src/locales/es/translation.json
@@ -58,5 +58,99 @@
       "subtextTwo": "con toda la información y siguientes pasos para ti",
       "regards": "Un cordial saludo"
     }
+  },
+  "RJ2": {
+    "header": "Nuevo inquilino - Rimbo - La nueva forma de alquilar",
+    "titleOne": "Cuéntanos un poco más de ti para ahorrarte",
+    "titleTwo": " el depósito de tu próximo piso",
+    "subtitle": " Todo lo que necesitamos es que completes la siguiente información. ¡Fácil y sencillo!",
+    "warning": "Necesitaremos una copia escaneada de tu DNI/NIE (anverso y reverso) o pasaporte y un documento que confirme tu dirección actual. Si eres ciudadano de la UE, por favor informa tu número de NIE en el campo “Número de documento” y envíanos una copia escaneada del documento de identidad de tu país de origen.",
+    "monthlyNetIncome": "Ingresos netos mensuales",
+    "monthlyNetIncomePL": "Escribe tus ingresos",
+    "jobType": "Tipo de empleo",
+    "jobTypePL": "Selecciona tu tipo de empleo",
+    "jobTypeOne": "Asalariado",
+    "jobTypeTwo": "Autónomo",
+    "jobTypeThree": "Sin empleo",
+    "jobTypeFour": "Somos una empresa",
+    "jobTypeFive": "Estoy jubilado",
+    "jobTypeSix": "Soy estudiante",
+    "jobTypeSeven": "Otro",
+    "tenantsAddress": "Dirección actual",
+    "tenantsAddressPL": "Escribe la dirección en la que resides",
+    "tenantsZipCode": "Código postal actual",
+    "tenantsZipCodePL": "XXXXX",
+    "documentType": "Tipo de documento",
+    "documentTypePL": "Selecciona el tipo de documento",
+    "documentTypeOne": "DNI",
+    "documentTypeTwo": "NIE",
+    "documentTypeThree": "Pasaporte",
+    "documentTypeFour": "Other",
+    "documentNumber": "Número de documento",
+    "documentNumberPL": "Escribe el número de tu documento",
+    "DF": "DNI/NIE (Frontal)",
+    "DB": "DNI/NIE (Atrás)",
+    "LP": "Última nómina",
+    "PP": "Penúltima nómina",
+    "checkboxOne": "Al enviar este formulario, comprendes y aceptas que utilizamos tu información de acuerdo con nuestra",
+    "checkboxTwo": "política de privacidad",
+    "checkboxThree": "y nuestra",
+    "checkboxFour": "política de cookies",
+    "checkboxFive": "para ofrecerte los servicios de Rimbo",
+    "completedTitle": "El formulario ha sido completado con éxito",
+    "completedSubtitle": "Toda la información ha sido registrada",
+    "completeSubtextOne": "Gracias por tu tiempo ",
+    "completeSubtextTwo": "nos pondremos en contacto contigo en breves para darte más detlales del proceso.",
+    "completeRegards": "Un cordial saludo"
+  },
+  "RJ3": {
+    "header": "New Tenant - Rimbo - La nueva forma de alquilar",
+    "title": "¡Genial! ¡Estás a solo un paso de formar parte de Badi!",
+    "subtitle": "Solo falta que revises nuestros Términos y condiciones y que proporciones la autorización de cargo",
+    "warningOne": "* Tu tarjeta no va a ser bloqueada. La tarjeta no será cargada ahora. Solo en caso de reclamos legales presentados por el propietario la tarjeta será cargada, por un importe límite de ",
+    "warningTwo": "1 mes de alquiler.",
+    "warningThree": "2 meses de alquiler.",
+    "cardTitle": "Datos tarjeta de débito",
+    "isAcceptedOne": "Al contratar los servicios de Rimbo aceptas las ",
+    "isAcceptedTwo": "condiciones generales de Rimbo.",
+    "authorize": "Autorizar",
+    "completedTitle": "Tu registro ha sido completado con éxito",
+    "completedSubtitle": "En breves nos pondremos en contacto contigo con más detalles.",
+    "completeSubtextOne": "Gracias por tu tiempo ",
+    "completeSubtextTwo": "te daremos más detalles del proceso."
+  },
+  "RJS": {
+    "header": "Landlord Details - Rimbo - La nueva forma de alquilar",
+    "title": "¡Bien! ¡El alquiler ya está cubierto por Rimbo!",
+    "titleTwo": "¡Tus inquilinos ya pueden mudarse!",
+    "warningOne": "Confirma la fecha de inicio del alquiler, sube el Anexo de Rimbo y comparte los datos de contacto del propietario",
+    "landlordName": "Nombre del propietario",
+    "landlordNamePL": "Escribe el nombre completo",
+    "landlordEmail": "Email del propetiario",
+    "landlordEmailPL": "Escribe el correo electrónico",
+    "landlordPhone": "Teléfono del propietario",
+    "landlordPhonePL": "Escribe el número de teléfono",
+    "date": "Fecha de inicio del alquiler",
+    "file": "Documentos (Anexo)",
+    "completedTitle": "El formulario ha sido completado con éxito",
+    "completedSubtitle": "Toda la información ha sido recibida correctamente",
+    "completeSubtextOne": "Gracias por tu tiempo ",
+    "completeSubtextTwo": "en breves nos pondremos en contacto contigo para darte más detalles del proceso."
+  },
+  "success": {
+    "header": "Aprobado - Rimbo - La nueva forma de alquilar",
+    "tenancyTitle": "El alquiler ha sido aceptado",
+    "tenancysubTitle": "Has aceptado correctamente este alquiler",
+    "tenancyPOne": "El inquilino ",
+    "tenancyPTwo": " ha sido aceptado",
+    "tenancyPThree": "El inquilino y el propietario recibirán un email informándoles de que el servicio ha empezado ",
+    "tenantTitle": "El inquilino ha sido aceptado",
+    "tenantSubtitle": "Has aceptado correctamente al inquilino",
+    "tenantPOne": "El inquilino ",
+    "tenantPTwo": " ha sido aceptado",
+    "tenantPThree": "Tanto tu como el inquilino vais a recibir un correo electrónico con los detalles del proceso",
+    "tenantCardTitle": "El inquilino ha sido aceptado después de introducir su tarjeta.",
+    "tenantCardSubtitle": "Has aceptado correctamente al inquilino",
+    "tenantCardP": "El propietario y el inquilino recibirán un correo de confirmación."
   }
 }
