2️⃣  V.2.7 🎉 Added Google Maps Autocomplete on RJ1  ✅ | Fix variables on emails and replicate GMA on RJ2 🎉

--- a/client/src/locales/en/translation.json
+++ b/client/src/locales/en/translation.json
@@ -38,12 +38,16 @@
       "rentDurationPL": "Enter duration",
       "rentAmount": "Monthly rent (in €)",
       "rentAmountPL": "Enter rent",
+      "completeRentalAddress": "Address of the property",
+      "completeRentalAddressPL": "Enter complete address",
       "rentalAddress": "Address of the property",
       "rentalAddressPL": "Enter address",
+      "rentalAddressSecond": "Property details",
+      "rentalAddressSecondPL": "Floor, door, number...",
       "rentalCity": "City",
       "rentalCityPL": "Enter the city name",
       "rentalPostalCode": "Postal code",
-      "rentalPostalCodePL": "Enter the postal code",
+      "rentalPostalCodePL": "XXXXX",
       "pp1": " By submitting this form, you understand and accept that we use your information in accordance with our",
       "pp2": "privacy policy",
       "pp3": "and",
