--- a/client/src/locales/es/translation.json
+++ b/client/src/locales/es/translation.json
@@ -38,12 +38,16 @@
       "rentDurationPL": "Escribe la duración",
       "rentAmount": "Alquiler mensual (en €)",
       "rentAmountPL": "Escribe el alquiler",
+      "completeRentalAddress": "Dirección del inmueble",
+      "completeRentalAddressPL": "Escribe la dirección completa del inmueble",
       "rentalAddress": "Dirección del inmueble",
       "rentalAddressPL": "Escribe la dirección",
+      "rentalAddressSecond": "Detalles de la dirección",
+      "rentalAddressSecondPL": "Piso, puerta, número...",
       "rentalCity": "Población del inmueble",
       "rentalCityPL": "Escribe la ciudad",
       "rentalPostalCode": "Código postal del inmueble",
-      "rentalPostalCodePL": "Escribe el código postal",
+      "rentalPostalCodePL": "XXXXX",
       "pp1": " Al enviar este formulario, comprendes y aceptas que utilizamos tu información de acuerdo con nuestra",
       "pp2": "política de privacidad",
       "pp3": "y nuestra",
